eks/sample_1/alpine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: alpine:latest
        command: ["sh", "-c", "while true; do sleep 3600; done"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: alpine-service
spec:
  type: NodePort
  selector:
    app: alpine
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
